--- a/css/styles.css
+++ b/css/styles.css
@@ -12,8 +12,27 @@ body {
   padding-top: 70px;
 }
 
+
 #play {
   margin-top: 10px;
   padding-left: 50px;
   padding-right: 50px;
+}
+
+.grow img {
+  float: left
+  display: inline-block;
+  height: 75px;
+  width: 75px;
+
+  -webkit-transition: all 1s ease;
+     -moz-transition: all 1s ease;
+       -o-transition: all 1s ease;
+      -ms-transition: all 1s ease;
+          transition: all 1s ease;
+}
+
+.grow img:hover {
+  width: 100px;
+  height: 100px;
 }
