--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,3 @@
-/*
-Bootstrap 3.1 overrides from http://bootply.com
-
-This CSS code should follow the 'bootstrap.css'
-in your HTML file.
-
-license: MIT
-author: bootply.com
-*/
-
 /*navbar I assume: default css*/
 body {
   padding-top: 70px;
@@ -34,8 +24,8 @@ body {
 }
 
 .grow img:hover {
-  width: 100px;
-  height: 100px;
+   background-color: yellow;
+   padding: 5px;
 }
 
 /*Font styles for the scoreboards on right of screen*/
